--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,10 @@ anyhow = "1.0.66"
 bitvec = "1.0.1"
 clap = { version = "4.0.18", features = ["derive"] }
 crossterm = "0.25.0"
+indicatif = "0.17.2"
+num-bigint = { version = "0.4.3", features = ["rand"] }
 parse_int = "0.6.0"
+rand = "0.8.5"
 rustyline = "10.0.0"
 thiserror = "1.0.37"
 tui = "0.19.0"
