--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ indicatif = "0.17.2"
 parse_int = "0.6.0"
 rand = "0.8.5"
 rustyline = "10.0.0"
+sha2 = { version = "0.10.6", features = ["compress"] }
 thiserror = "1.0.37"
 tui = "0.19.0"
